[B] Fix SR visibility of header items
Uses CSS visibility property to hide collapsed submenus and search bar from screen readers

--- a/components/global/Header/_search-bar.scss
+++ b/components/global/Header/_search-bar.scss
@@ -31,11 +31,14 @@
     align-items: center;
     width: 60px;
     height: 100%;
-    transition: width 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    transition: width 0.35s ease-in-out, background-color 0.35s ease-in-out, visibility 0s 0.35s;
+    visibility: hidden;
 
     &--is-open {
       width: 468px;
       background-color: functions.palette(black);
+      visibility: visible;
+      transition: width 0.35s ease-in-out, background-color 0.35s ease-in-out;
 
       @include base.respond(functions.header(breakpoint-for-search-bar)) {
         // overlap logo
